--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Italian fiction'
 - !lcc 'PQ'
+- GITenberg
 title: 'Vita e avventure di Riccardo Joanna: romanzo'
 url: http://www.gutenberg.org/ebooks/41473
